<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/set_info"
        app:showAsAction="never"
        android:title="@string/set_info" />
    <item android:id="@+id/set_edit"
        app:showAsAction="never"
        android:title="@string/edit_set" />
    <item android:id="@+id/action_add_song"
        app:showAsAction="always"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add_song" />

    <item android:id="@+id/action_duplicate"
        app:showAsAction="never"
        android:title="@string/duplicate_set" />


    <item android:id="@+id/action_export"
        app:showAsAction="never"
        android:title="@string/export_set" />
    <item android:id="@+id/action_delete_set"
        app:showAsAction="never"
        android:title="Delete" />
</menu>